# pysilero-vad

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  publish_test.yml  test.yml
pysilero_vad/: __init__.py
script/: format  lint  package  test
src/: py_silero_vad.cpp  whisper_vad.hpp
src/ggml/src/ggml-cpu/: ops.cpp
src/ggml/src/ggml-cpu/arch/arm/: cpu-feats.cpp
src/pysilero_vad/: __init__.py
tests/: test_vad.py
