[metadata]
name = pysilero-vad
author = Michael Hansen
author_email = mike@rhasspy.org
url = http://github.com/rhasspy/pysilero-vad
description = Pre-packaged voice activity detector using silero-vad
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    voice
    activity
    silero
    vad
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Text Processing :: Linguistic
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.9
include_package_data = true

[options.packages.find]
include =
    pysilero_vad
    pysilero_vad.*
exclude =
    tests
    tests.*

[options.package_data]
pysilero_vad =
    ggml-silero-v6.2.0.bin

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pylint
    pytest
    build

[bdist_wheel]
# This makes the wheel tag abi3 (single wheel per platform for all 3.9+)
py_limited_api = cp39

[flake8]
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[isort]
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
indent = "    "
